<resources>
    <string name="app_name">Draja</string>
    <string name="action_settings">Settings</string>
    <string name="startBtnText">Begin</string>
    <string name="optionsBtnTxt">Options</string>
    <string name="drawLblTxt">Draw</string>
    <string name="doneBtnTxt">Done</string>
    <string name="fightLblTxt">Fight!</string>
    <string name="p1LblTxt">Player 1</string>
    <string name="p2LblTxt">Player 2</string>
    <string name="winnerLblTxt">Winner:</string>
    <string name="okBtnText">OK</string>
    <string name="optionLblTxt">Options</string>
    <string name="soundSwitchTxt">Sound</string>
    <string name="MusicSwitchTxt">Music</string>
    <string name="weaponLblText">Weapons</string>
    <string name="ShurikenChkBxTxt">Shuriken</string>
    <string name="drawBtnTxt">Draw</string>
    <string name="pveChkBxTxt">PVE</string>
    <string name="pvpChkBxTxt">PVP</string>
    <string name="modeLblTxt">Mode</string>
    <string name="BombChkBxTxt">Talisman</string>
    <string name="SwordChkBxTxt">Sword</string>
    <string name="ClearBtnTxt">Clear</string>
    <string name="backBtnImgTxt">Goes back a screen</string>
    <string name="modeBackBtnImgTxt">Goes back to picking a mode</string>
    <string name="drawBackBtnImgTxt">Goes back to picking a weapon</string>
    <string name="mainMenuLblTxt">Draja</string>
    <string name="audioImgBtnInfo">Toggle audio on/off</string>
    <string name="aiWeaponGalleryImgBtnTxt">Displays AI weapon gallery</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="player1ImgTxt">Player 1 img</string>
    <string name="player2ImgTxt">Player 2 img</string>
    <string name="player1WeaponImgTxt">Player 1 weapon img</string>
    <string name="player2WeaponImgTxt">Player 2 weapon Img</string>
    <string name="title_activity_dialog">Dialog</string>
    <string name="weaponRestartImgBnTxt">Restarts game and brings back tp weapon selection</string>
    <string name="drawResttartImgBtnTxt">Restarts game and brings back tp weapon selection</string>
    <string name="continueBtn">Continue</string>
    <string name="losing_mark_txt">Losing mark</string>
    <string name="lostdesctxt">lostDesc</string>
    <string name="p1cornerTxt">P1</string>
    <string name="p2CornerTxt">P2</string>
    <string name="exit_txt">Exit?</string>
    <string name="resume_txt">Resume</string>
    <string name="cancel_txt">Cancel</string>
    <string name="p1m1desctxt">p1m1Desc</string>
    <string name="p2m2desctxt">p2m2desc</string>
    <string name="p2m1desctxt">p2m1desc</string>
    <string name="p2m3desctxt">p2m3desc</string>
    <string name="vidhackdesctxt">vidHackDesc</string>
    <string name="backgroundimgdesctxt">backgroundImgDesc</string>
    <string name="fadeimgdesctxt">fadeImgDesc</string>
    <string name="playerRes">Player</string>
    <string name="buildRes">Build 1.0.3</string>
</resources>
