<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="retroroots.alphadraja.WeaponFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/weaponLblText"
        android:id="@+id/weaponTitleLbl"
        android:textIsSelectable="false"
        android:textSize="40sp"
        android:layout_above="@+id/swordChkBx"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="69dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drawBtnTxt"
        android:id="@+id/drawBtn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp" />

    <CheckBox
        android:checked="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ShurikenChkBxTxt"
        android:id="@+id/shurikenChkBx"
        android:layout_alignTop="@+id/bombChkBx"
        android:layout_toLeftOf="@+id/weaponTitleLbl"
        android:layout_toStartOf="@+id/weaponTitleLbl" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BombChkBxTxt"
        android:id="@+id/bombChkBx"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/weaponTitleLbl"
        android:layout_toEndOf="@+id/weaponTitleLbl" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SwordChkBxTxt"
        android:id="@+id/swordChkBx"
        android:layout_alignTop="@+id/shurikenChkBx"
        android:layout_alignLeft="@+id/drawBtn"
        android:layout_alignStart="@+id/drawBtn" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weaponBackBtnImg"
        android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha"
        android:contentDescription="@string/modeBackBtnImgTxt"
        android:layout_alignBottom="@+id/weaponRestartImgBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weaponRestartImgBtn"
        android:contentDescription="@string/weaponRestartImgBnTxt"
        android:src="@android:drawable/ic_menu_rotate"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/weaponBackBtnImg"
        android:layout_toEndOf="@+id/weaponBackBtnImg"
        android:layout_marginLeft="10dp"/>/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weapongSoungImgBtn"
        android:src="@android:drawable/ic_lock_silent_mode_off"
        android:contentDescription="@string/audioImgBtnInfo"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"/>

</RelativeLayout>
