<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="retroroots.alphadraja.ModeFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/modeLblTxt"
        android:id="@+id/textView2"
        android:textSize="40sp"
        android:layout_below="@+id/modeBackBtnImg"
        android:layout_toLeftOf="@+id/pveChkBx"
        android:layout_toStartOf="@+id/pveChkBx" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/okBtnText"
        android:id="@+id/okBtn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"/>

    <CheckBox
        android:checked="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pvpChkBxTxt"
        android:id="@+id/pvpChkBx"
        android:layout_alignBaseline="@+id/pveChkBx"
        android:layout_alignBottom="@+id/pveChkBx"
        android:layout_toLeftOf="@+id/okBtn"
        android:layout_toStartOf="@+id/okBtn" />

    <CheckBox
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pveChkBxTxt"
        android:id="@+id/pveChkBx"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/okBtn"
        android:layout_toEndOf="@+id/okBtn" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/modeBackBtnImg"
        android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha"
        android:contentDescription="@string/backBtnImgTxt"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
