<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.retroroots.alphadraja.MainMenuFragment"
    android:id="@+id/audioImgBtn"
    android:background="#ffffff">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainMenuLblTxt"
        android:id="@+id/mainHeaderLbl"
        android:layout_gravity="center_horizontal|top"
        android:textSize="80sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startBtnText"
        android:id="@+id/startBtn"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:background="@drawable/btn_borders"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/soundImgBtn"
        android:src="@mipmap/vol_on"
        android:contentDescription="@string/audioImgBtnInfo"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#ffffff"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"/>

    <ImageButton
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/aiWeaponGalleryImgBtn"
        android:src="@android:drawable/ic_menu_gallery"
        android:layout_marginLeft="72dp"
        android:layout_marginStart="72dp"
        android:layout_alignTop="@+id/mainHeaderLbl"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/aiWeaponGalleryImgBtnTxt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buildNum"
        android:text="@string/buildRes"
        android:layout_alignParentBottom="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>
