<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    tools:context=".DialogActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/exitTitleLbl"
        android:text="@string/exit_txt"
        android:textSize="60sp"
        android:textColor="#000000"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resume_txt"
        android:id="@+id/exitBtn"
        android:background="@drawable/btn_borders"
        android:layout_below="@+id/exitTitleLbl"
        android:layout_marginTop="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_txt"
        android:id="@+id/resumeBtn"
        android:background="@drawable/btn_borders"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/exitTitleLbl"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

         />
</RelativeLayout>
